--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=produto
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb ;AUTO_SERVER=inMemory;AUTO_SERVER_PORT=9092;DB_CLOSE_DELAY=-1;
+spring.datasource.url=jdbc:h2:file:C:/Users/henrique.cesar/Desktop/Henrique/Projetos/apis/produto/db;AUTO_SERVER=inMemory;AUTO_SERVER_PORT=9092;DB_CLOSE_DELAY=-1;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
