--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
